cupsys (1.1.99.b1.r4885-2) UNRELEASED-experimental; urgency=low

  [ Kenshi Muto ]
  * 

 -- Kenshi Muto <kmuto@debian.org>  Fri, 23 Dec 2005 15:33:41 +0900

cupsys (1.1.99.b1.r4885-1) experimental; urgency=low

  [ Kenshi Muto ]
  * New SVN release taken from rr4885.
  * Updated Russian debconf translation, taken from cupsys trunk.
  * Downgrade port and browse question to low.
  * Add timeout routine to avoid lockup.
  * debian/patches/08_cupsd.conf.conf.d.dpatch:
    - Commented out Port/Listen/Browsing from cupsd.conf.in.
      CUPS crashes when there is a duplicate definition.
  * Updated Swedish debconf translation.
  * Set seen false flag when ports configuration is failed.
  * Allow '*' for hostname in ports.conf.
  * Use /bin/echo instead of shell built-in echo.
  * Improve cupsys.templates.
  * Updated Russian, German, Czech,French, Vietnamese debconf translation.
  * Removed example descriptions from init.d script.
  * Fix IPv4 validation.

  [ Martin Pitt ]
  * Adapt debian/patches/02_configure.dpatch to r4885.
  * Move forcefully killing of cupsd if start-stop-daemon fails from
    postinst to init script, where it belongs to. Do not kill all running
    cupsd processes, but only the one in the pid file; this will unbreak cupsd
    behaviour in chroots.
  * debian/cupsys.default: Remove obsolete FORCE_RESTART option.
  * Resurrect debian/patches/01_cupsimage.dpatch (formerly
    03_cupsimage.dpatch), as we get unresolved symbols if libcupsimage
    isn't properly linked to libcupsys, causing other packages to FTBFS.
    Thanks to Adam Conrad.
  * debian/cupsys.init.d: Add --oknodo to not fail if cupsd is already
    running.
  * debian/rules: In clean rule, clean up a lot of files that are left behind
    by 'make clean'.

 -- Kenshi Muto <kmuto@debian.org>  Fri, 23 Dec 2005 06:33:05 +0000

cupsys (1.1.99.b1.r4876-1) unstable; urgency=low

  [ Martin Pitt ]
  * debian/local/{enable_browsing,browsing_status}: Adapt configuration file