@@ -1,9 +1,13 @@
 cupsys (1.1.99.b1.r4885-2) UNRELEASED-experimental; urgency=low
 
   [ Kenshi Muto ]
-  * 
+  *
 
- -- Kenshi Muto <kmuto@debian.org>  Fri, 23 Dec 2005 15:33:41 +0900
+  [ Martin Pitt ]
+  * debian/cupsys.init.d: Fix arguments of start-stop-daemon and remove the
+    hideous kill algorithm.
+
+ -- Martin Pitt <mpitt@debian.org>  Wed, 11 Jan 2006 19:29:51 +0100
 
 cupsys (1.1.99.b1.r4885-1) experimental; urgency=low
 
